--- a/page1.html
+++ b/page1.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Welcome to Page 1!!!</h1>
-    <p>This is Shekhar Mehta. N01580922</p>
+    <p>This is Shekhar Mehta N01580922</p>
     <a href="page2.html">Go to Page 2</a>
     <a href="page3.html">Go to Page 3</a>
 </body>
